# Slicer

./: CMakeLists.txt  SlicerWizard.html  SuperBuild.cmake  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
Applications/SlicerApp/: CMakeLists.txt  Main.cxx
Base/: freesurfer.html  genindex.html  index.html  modules.html  mrml.html  mrmlLogic.html  mrmlcli.html  objects.inv  py-modindex.html  saferef.html  search.html  searchindex.js  sitkUtils.html  slicer.html  slicer.moduledm.html  slicer.modulelogic.html  slicer.modulemrml.html  slicer.modulewidget.html  slicer.release.html  teem.html  tpycl.html  vtkITK.html
Base/Python/: CMakeLists.txt  saferef.py  sitkUtils.py
Base/QTCore/: qSlicerExtensionsManagerModel.cxx
Base/QTGUI/: CMakeLists.txt  qSlicerSettingsStylesPanel.cxx
Base/_modules/: index.html  saferef.html  sitkUtils.html
Base/_sources/: index.txt  modules.txt  slicer.moduledm.txt  slicer.modulelogic.txt  slicer.modulemrml.txt  slicer.modulewidget.txt  slicer.release.txt  slicer.txt  tpycl.txt  vtkITK.txt
CMake/: ExternalProjectDependency.cmake  SlicerFunctionCompilePythonScript.cmake
SlicerWizard/: SlicerWizard.html  genindex.html  index.html  objects.inv
SlicerWizard/_modules/: SlicerWizard.html  (+1 more)
SuperBuild/: External_CTK.cmake  External_DCMTK.cmake  External_ITKv4.cmake  External_OpenIGTLink.cmake  External_SlicerExecutionModel.cmake  External_VTKv5.cmake  External_VTKv6.cmake  External_qRestAPI.cmake  External_teem.cmake
Utilities/Scripts/: CMakeLists.txt  genqrc.py
_modules/: SlicerWizard.html
(+31 files in other folders)
